Fixed table overflowing beyond its panel

--- a/src/Portal/Portal/wwwroot/css/site.css
+++ b/src/Portal/Portal/wwwroot/css/site.css
@@ -103,3 +103,7 @@ table.task-list thead tr th {
 .black {
     color: black;
 }
+
+.panel {
+    overflow: auto;
+}
